--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 .title {
-    color: rgb(255, 234, 0);
+    color: rgb(255, 102, 0);
     text-align: center;
 }
 
@@ -8,7 +8,7 @@
 }
 
 header {
-    background-color: #333;
+    background-color: #333333ad;
     color: #fff;
     padding: 10px;
     text-align: center;
@@ -29,8 +29,19 @@ nav ul {
 }
 
 nav ul li {
-    display: inline;
-    margin-right: 20px;
+    list-style:none ;
+    display: inline-block;
+    background-color: rgb(252, 87, 27);
+    padding: 10px;
+    margin: 10px;
+    border-radius: 20px;
+    width: 75px;
+    text-align: center;
+    transition: 0.5s;
+}
+
+nav ul li:hover{
+    background-color: rgb(47, 0, 255);
 }
 
 nav a {
@@ -42,21 +53,89 @@ nav a {
 body {
     background-image: url('images/background.jpg');
     background-size: cover;
-    background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
+    background-position: center;
 }
 
 main {
     padding: 20px;
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
+.video {
+    width: 100%;
+    height: 600px;
+    margin: 0 auto;
+    display: block;
+    border-radius: 20px;
+    box-shadow: 0 0 10px #000;
+}
+
+.contact {
+    display: flex;
+    justify-content: space-between;
+    background-color: #f7f7f744;
+    padding: 40px;
+    border-radius: 10px;
+}
+
+.contact .text {
+    flex: 1;
+    padding: 10px;
+}
+
+.contact input, .contact textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.contact input[type="submit"] {
+    background-color: #f7f7f744;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.text iframe {
+    width: 100%;
+    height: 300px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+}
+
+p, h1 {
+    color: rgb(255, 102, 0);
+}
+
 footer {
-    background-color: #333;
+    background-color: #333333ad;
     color: #fff;
     text-align: center;
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer h2{
+    color: aliceblue;
+    font-size: 20px;
+}
+
+.social a{
+    color:aliceblue;
+    margin: 10px;
+    font-size: 30px;
+    text-decoration: none;
+}
+.social b{
+    color: aliceblue;
 }
