--- a/style.css
+++ b/style.css
@@ -1,17 +1,46 @@
 .title {
-    color: rgb(12, 42, 126);
+    color: rgb(16, 61, 209);
     text-align: center;
+    font-size: 50px;
+    margin: 0;
+    padding: 20px;
+}
+
+.slogan {
+    border-radius: 25%;
+    transition: 5s;
+}
+
+.slogan:hover {
+    transform: scale(1.2);
+    border-radius: 50%;
+    transition: 5s;
 }
 
 .logo {
-    width: 150px;
+    width: 100px;
+    height: auto;
+    border-radius: 25%;
+    transition: 2.5s;
+}
+
+.logo:hover {
+    animation: logo-animation .3s ease forwards alternate infinite running;
+    transform: scale(1.2);
+    border-radius: 50%;
+    transition: 2.5s;
 }
 
 header {
     background-color: #8b8585ad;
     color: #fff;
     padding: 10px;
+    display: flex;
     text-align: center;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 header h1 {
@@ -22,26 +51,35 @@ header h1 {
 header h1 {
     margin: 0;
     padding: 10px 0;
+}
+
+nav {
+    display: flex;
+    align-items: center;
 }
 
 nav ul {
     list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0
 }
 
 nav ul li {
-    list-style: none;
     display: inline-block;
     background-color: rgb(60, 58, 197);
     padding: 10px;
     margin: 10px;
-    border-radius: 20px;
-    width: 75px;
+    border-radius: 25px;
+    width: auto;
     text-align: center;
-    transition: 0.5s;
+    transition: 1s;
 }
 
 nav ul li:hover {
-    background-color: rgb(47, 0, 255);
+    background-color: rgb(130, 102, 255);
+    transform: scale(1.2);
+    transition: 1.5s;
 }
 
 nav a {
@@ -55,12 +93,40 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 main {
     padding: 20px;
     max-width: 1000px;
     margin: 0 auto;
+}
+
+.image-container {
+    width: 100%;
+    overflow-x: scroll;
+    white-space: nowrap;
+    padding: 10px;
+    margin-bottom: 20px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #000;
+    transition: 1s;
+}
+
+.image-container img {
+    height: 250px;
+    margin-right: 10px;
+    border-radius: 20%;
+    transition: 1s;
+}
+
+.image-container img:hover {
+    transform: scale(1.05);
+    transition: 1s;
 }
 
 .video {
@@ -70,6 +136,12 @@ main {
     display: block;
     border-radius: 20px;
     box-shadow: 0 0 10px #000;
+    transition: 1s;
+}
+
+.video:hover {
+    transform: scale(1.01);
+    transition: 1s;
 }
 
 .contact {
@@ -78,6 +150,7 @@ main {
     background-color: #f7f7f744;
     padding: 40px;
     border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 .contact .text {
@@ -93,15 +166,24 @@ main {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+    resize: none;
 }
 
 .contact input[type="submit"] {
     background-color: #2157bd44;
-    color: #ffffff81;
+    color: #ccc;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 16px;
+    transition: 1s;
+}
+
+.contact input[type="submit"]:hover {
+    background-color: #2157bd;
+    color: #fff;
+    transition: 1s;
 }
 
 .text iframe {
@@ -118,6 +200,20 @@ h1 {
     color: rgb(11, 43, 104);
 }
 
+.map {
+    flex: 1;
+    padding: 10px;
+    margin-left: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #000;
+    transition: 1s;
+}
+
+.map:hover {
+    transform: scale(1.05);
+    transition: 1s;
+}
+
 footer {
     background-color: #adb2b891;
     color: #fff;
@@ -125,11 +221,15 @@ footer {
     padding: 10px;
     display: flex;
     justify-content: space-between;
+    border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 footer h2 {
     color: rgb(5, 75, 107);
     font-size: 20px;
+    margin: 0;
+    padding: 10px 0;
 }
 
 .social a {
@@ -137,20 +237,25 @@ footer h2 {
     margin: 10px;
     font-size: 30px;
     text-decoration: none;
+    transition: 1s;
 }
 
 .social b {
     color: aliceblue;
+    margin: 10px;
+    font-size: 30px;
+    text-decoration: none;
+    transition: 1s;
 }
 
-.image-container {
-    width: 100%;
-    overflow-x: scroll;
-    white-space: nowrap;
+.social a i:hover {
+    color: rgb(5, 75, 107);
+    transform: scale(1.2);
+    transition: 1s;
 }
 
-.image-container img {
-    height: 250px;
-    margin-right: 10px;
-    border-radius: 20%;
+#mark:hover {
+    color: rgb(3, 39, 56);
+    font-size: 105%;
+    transition: 2.5s;
 }
